Refactor ShadowJS Engine
- Updated the `Environment` struct to use `shadowjs_value::Value` instead of the previous value module.
- Removed the `value.rs` file as its functionality has been integrated into the `shadowjs_value` crate.
- Enhanced the `VM` struct to utilize `rustc_hash::FxHashMap` for global variables and added JIT compilation support.
- Introduced a new `shadowjs_jit` crate for Just-In-Time compilation with a custom assembler.
- Added README files for new crates: `shadowjs-ast`, `shadowjs-bindings`, `shadowjs-bytecode`, `shadowjs-cli`, `shadowjs-engine`, `shadowjs-gc`, `shadowjs-jsruntime`, `shadowjs-lexer`, `shadowjs-parser`, `shadowjs-value`, and `shadowjs-vm`.
- Implemented garbage collection tracing in the `shadowjs_gc` crate.
- Updated the Rust toolchain to version 1.89 with necessary components.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ members = [
     "crates/bindings",
     "crates/engine",
     "crates/cli",
+    "crates/jit",
+    "crates/value",
 ]
 
 resolver = "2"
