--- a/crates/bytecode/Cargo.toml
+++ b/crates/bytecode/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 shadowjs-ast = { path = "../ast" }
 serde = { version = "1", features = ["derive"] }
+shadowjs-gc = { version = "0.1.0", path = "../gc" }
